--- a/src/components/HeroImgContact.css
+++ b/src/components/HeroImgContact.css
@@ -1,4 +1,4 @@
-.hero{
+.hero-img{
     height: 100%;
     width: 100%;
 }
@@ -9,7 +9,7 @@
     position: relative;
 }
 
-.about-img {
+.contact-img {
     width: 100%;
     height: 100%;
     background-size: cover;
@@ -24,43 +24,34 @@
     position: absolute;
     top: 0;
     left: 0;
-    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.363);
     opacity: 0.8;
 }
 
-.hero .content {
+.hero-img .heading {
     position: absolute;
     transform: translate(-50%, -50%);
-    top: 50%;
-    bottom: -20%;
+    top: 30%;
     left: 50%;
-    right: -20%;
+    text-align: center;
 }
 
-.hero .content h1{
+.hero-img .heading h1{
     font-size: 2rem;
     padding: 0.6rem 0 1.5rem;
 }
 
-.hero .content p {
+.hero-img .heading p {
     font-size: 1.4rem;
     text-align: center;
 }
 
 @media screen and (max-width:640px) {
-    .hero .content {
-        position: absolute;
-        transform: translate(-50%, -50%);
-        top: 50%;
-        bottom: -20%;
-        left: 50%;
-        right: -40%;
-    }
-    .hero .content h1{
+    .hero-img .heading h1{
         font-size: 1.4rem;
     }
     
-    .hero .content p{
+    .hero-img .heading p{
         font-size: 1rem;
     }
     
