--- a/src/components/WorkCard.css
+++ b/src/components/WorkCard.css
@@ -4,11 +4,11 @@
 }
 
 .post-container {
-    max-width: 1140px;
-    margin: auto;
+    max-width: 100%;
+    margin: 5%;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 40px;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 50%;
     padding-bottom: 5rem;
 }
 
@@ -57,6 +57,7 @@
     .post-container {
         max-width: 90%;
         margin: auto;
+        grid-gap: 20%;
 
         grid-template-columns: 1fr;
     }
