--- a/src/pages/PostDetails/PostDetails.css
+++ b/src/pages/PostDetails/PostDetails.css
@@ -5,7 +5,7 @@
 
 .mask-details {
     width: 100%;
-    height: 100%;
+    height: 80vh;
     position: relative;
 }
 
@@ -41,7 +41,7 @@
     font-size: 2rem;
     padding: 0.6rem 0 1.5rem;
     text-align: center;
-    margin: 5% ;
+    margin-bottom: 2% ;
 }
 
 .hero-details .content p {
@@ -68,7 +68,7 @@
         font-size: 1.4rem;
     }
     
-    .hero .content p{
+    .hero-details .content p{
         font-size: 1rem;
     }
     
