--- a/src/pages/PostDetails/PostDetails.css
+++ b/src/pages/PostDetails/PostDetails.css
@@ -49,7 +49,7 @@
     text-align: center;
 }
 
-.hero-details .content h4 {
+.hero-details .content-details h4 {
     font-size: 1.4rem;
     text-align: right;
     padding: 5%;
