--- a/src/pages/About/HeroImgAbout.css
+++ b/src/pages/About/HeroImgAbout.css
@@ -1,4 +1,4 @@
-.hero{
+.hero-about{
     height: 100%;
     width: 100%;
 }
@@ -28,7 +28,7 @@
     opacity: 0.8;
 }
 
-.hero .content {
+.hero-about .content {
     position: absolute;
     transform: translate(-50%, -50%);
     top: 50%;
@@ -37,18 +37,19 @@
     right: -20%;
 }
 
-.hero .content h1{
-    font-size: 2rem;
+.hero-about .content h1{
+    font-size: 2.3rem;
     padding: 0.6rem 0 1.5rem;
-}
-
-.hero .content p {
-    font-size: 1.4rem;
     text-align: center;
 }
 
-@media screen and (max-width:640px) {
-    .hero .content {
+.hero-about .content p {
+    font-size: 1.7rem;
+    text-align: center;
+}
+
+@media screen and (max-width:740px) {
+    .hero-about .content {
         position: absolute;
         transform: translate(-50%, -50%);
         top: 50%;
@@ -56,11 +57,12 @@
         left: 50%;
         right: -40%;
     }
-    .hero .content h1{
+    .hero-about .content h1{
         font-size: 1.4rem;
+        padding: 0.6rem 0 0.5rem;
     }
     
-    .hero .content p{
+    .hero-about .content p{
         font-size: 1rem;
     }
     
