--- a/src/pages/Contact/HeroImgContact.css
+++ b/src/pages/Contact/HeroImgContact.css
@@ -24,7 +24,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    background-color: rgba(0, 0, 0, 0.363);
+    background-color: rgba(0, 0, 0, 0.664);
     opacity: 0.8;
 }
 
@@ -36,15 +36,30 @@
     text-align: center;
 }
 
-.hero-img .heading h1{
-    font-size: 2rem;
+table {
+    margin-top: 10%;
+    margin-left: 15%;
+
+}
+tr {
+    width: auto;
+    height: auto;
+}
+.hero-img table .location-us {
+    text-align: left;
+}
+
+.hero-img table .phone {
+    text-align: left;
+}
+.hero-img table .email {
+    text-align: left;
+}
+.hero-img table tr th{
+    font-size: 1.4rem;
     padding: 0.6rem 0 1.5rem;
 }
 
-.hero-img .heading p {
-    font-size: 1.4rem;
-    text-align: center;
-}
 
 @media screen and (max-width:640px) {
     .hero-img .heading h1{
@@ -53,6 +68,17 @@
     
     .hero-img .heading p{
         font-size: 1rem;
+    }
+    .hero-img table tr th{
+        font-size: 1.4rem;
+        padding: 0.6rem 0 1.5rem;
+    }
+    
+}
+
+@media screen and (max-width:350px) {
+    .hero-img table tr th{
+        font-size: 0.5rem;
     }
     
 }
